fix inputs width on small monitor

--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,5 +1,5 @@
 .login {
-  width: 20%;
+  width: 210px;
   margin: auto;
   margin-top: 10%;
   display: flex;
